--- a/CallAplication/Base.lproj/Main.storyboard
+++ b/CallAplication/Base.lproj/Main.storyboard
@@ -278,11 +278,168 @@
                         <color key="backgroundColor" red="0.2156862745" green="0.23529411759999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="separatorColor" red="0.43529411764705883" green="0.44313725490196076" blue="0.47450980392156861" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Xpm-X7-tM7">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecentCell" rowHeight="55" id="Xpm-X7-tM7" customClass="RecentTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xpm-X7-tM7" id="RfE-ys-a3s">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJS-yj-98q">
+                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is my status" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yj-SR-yFQ">
+                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kic-aE-IOe">
+                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="QjY-wz-YjG"/>
+                                                <constraint firstAttribute="height" constant="55" id="bLA-9x-SaT"/>
+                                            </constraints>
+                                            <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                            <state key="normal" image="info_icon">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="QjY-wz-YjG"/>
+                                                    <exclude reference="bLA-9x-SaT"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=compact">
+                                                <mask key="constraints">
+                                                    <include reference="QjY-wz-YjG"/>
+                                                    <exclude reference="bLA-9x-SaT"/>
+                                                </mask>
+                                            </variation>
+                                            <connections>
+                                                <segue destination="yVd-md-pb6" kind="show" identifier="Contact Detail Segue From Recent" id="OZL-WT-bfh"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyz-Tc-6jl">
+                                            <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="10" id="Q9c-T6-TJa"/>
+                                                <constraint firstAttribute="height" constant="10" id="aba-lz-pN5"/>
+                                            </constraints>
+                                            <state key="normal">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="Q9c-T6-TJa"/>
+                                                    <exclude reference="aba-lz-pN5"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=compact">
+                                                <mask key="constraints">
+                                                    <include reference="Q9c-T6-TJa"/>
+                                                    <include reference="aba-lz-pN5"/>
+                                                </mask>
+                                            </variation>
+                                        </button>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="out_call_icon" translatesAutoresizingMaskIntoConstraints="NO" id="pyG-mU-AtI">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="LS4-P5-P1Z">
+                                                    <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                                                </constraint>
+                                                <constraint firstAttribute="width" constant="30" id="cGx-Oi-lwf">
+                                                    <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                                                </constraint>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="LS4-P5-P1Z"/>
+                                                    <exclude reference="cGx-Oi-lwf"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=compact">
+                                                <mask key="constraints">
+                                                    <include reference="LS4-P5-P1Z"/>
+                                                    <include reference="cGx-Oi-lwf"/>
+                                                </mask>
+                                            </variation>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="kic-aE-IOe" secondAttribute="bottom" constant="-8" id="8IZ-GR-vEP"/>
+                                        <constraint firstItem="2yj-SR-yFQ" firstAttribute="top" secondItem="NJS-yj-98q" secondAttribute="bottom" constant="-4" id="8sX-Cc-Jki">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="-1"/>
+                                        </constraint>
+                                        <constraint firstItem="kic-aE-IOe" firstAttribute="top" secondItem="RfE-ys-a3s" secondAttribute="topMargin" constant="-8" id="IZE-6e-Qvu"/>
+                                        <constraint firstAttribute="centerY" secondItem="pyG-mU-AtI" secondAttribute="centerY" id="Vwy-vb-2GJ"/>
+                                        <constraint firstItem="NJS-yj-98q" firstAttribute="leading" secondItem="pyG-mU-AtI" secondAttribute="trailing" constant="8" id="WgI-vO-YhL">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="16"/>
+                                        </constraint>
+                                        <constraint firstItem="pyG-mU-AtI" firstAttribute="leading" secondItem="RfE-ys-a3s" secondAttribute="leadingMargin" id="WzJ-8K-tqw">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="2"/>
+                                        </constraint>
+                                        <constraint firstItem="kic-aE-IOe" firstAttribute="leading" secondItem="yyz-Tc-6jl" secondAttribute="trailing" constant="2" id="b9H-7b-6gh"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="kic-aE-IOe" secondAttribute="trailing" constant="-10" id="bQv-u8-m5t"/>
+                                        <constraint firstItem="NJS-yj-98q" firstAttribute="centerY" secondItem="pyG-mU-AtI" secondAttribute="centerY" constant="-0.5" id="eFZ-mR-uVB"/>
+                                        <constraint firstItem="kic-aE-IOe" firstAttribute="centerY" secondItem="yyz-Tc-6jl" secondAttribute="centerY" id="pbu-Tf-eyl"/>
+                                        <constraint firstItem="2yj-SR-yFQ" firstAttribute="leading" secondItem="NJS-yj-98q" secondAttribute="leading" id="zi3-T4-wN6"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="subviews">
+                                            <exclude reference="NJS-yj-98q"/>
+                                            <exclude reference="2yj-SR-yFQ"/>
+                                            <exclude reference="kic-aE-IOe"/>
+                                            <exclude reference="yyz-Tc-6jl"/>
+                                            <exclude reference="pyG-mU-AtI"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <exclude reference="8sX-Cc-Jki"/>
+                                            <exclude reference="zi3-T4-wN6"/>
+                                            <exclude reference="WgI-vO-YhL"/>
+                                            <exclude reference="eFZ-mR-uVB"/>
+                                            <exclude reference="8IZ-GR-vEP"/>
+                                            <exclude reference="IZE-6e-Qvu"/>
+                                            <exclude reference="b9H-7b-6gh"/>
+                                            <exclude reference="bQv-u8-m5t"/>
+                                            <exclude reference="pbu-Tf-eyl"/>
+                                            <exclude reference="Vwy-vb-2GJ"/>
+                                            <exclude reference="WzJ-8K-tqw"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="heightClass=regular-widthClass=compact">
+                                        <mask key="subviews">
+                                            <include reference="NJS-yj-98q"/>
+                                            <include reference="2yj-SR-yFQ"/>
+                                            <include reference="kic-aE-IOe"/>
+                                            <include reference="yyz-Tc-6jl"/>
+                                            <include reference="pyG-mU-AtI"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <include reference="8sX-Cc-Jki"/>
+                                            <include reference="zi3-T4-wN6"/>
+                                            <include reference="WgI-vO-YhL"/>
+                                            <include reference="eFZ-mR-uVB"/>
+                                            <include reference="8IZ-GR-vEP"/>
+                                            <include reference="IZE-6e-Qvu"/>
+                                            <include reference="b9H-7b-6gh"/>
+                                            <include reference="bQv-u8-m5t"/>
+                                            <include reference="pbu-Tf-eyl"/>
+                                            <include reference="Vwy-vb-2GJ"/>
+                                            <include reference="WzJ-8K-tqw"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.2156862745" green="0.23529411759999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="image" destination="pyG-mU-AtI" id="WAu-9C-ZP9"/>
+                                    <outlet property="infoButton" destination="kic-aE-IOe" id="KUA-yF-7fg"/>
+                                    <outlet property="nameLabel" destination="NJS-yj-98q" id="GVn-lF-wYg"/>
+                                    <outlet property="status" destination="yyz-Tc-6jl" id="pnh-X5-HSF"/>
+                                    <outlet property="statusTextLabel" destination="2yj-SR-yFQ" id="VGQ-ks-zDX"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -290,11 +447,17 @@
                             <outlet property="delegate" destination="fIy-V0-EA0" id="PFM-uZ-LxQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Recents" id="iWq-ga-aZ4"/>
+                    <navigationItem key="navigationItem" title="Recents" id="iWq-ga-aZ4">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="RJw-ym-ZgT">
+                            <connections>
+                                <action selector="editButtonPressed:" destination="fIy-V0-EA0" id="oOt-Ss-Ox6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OcL-fN-rnU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4209" y="-113.25"/>
+            <point key="canvasLocation" x="4209" y="-116.25"/>
         </scene>
         <!--Contacts-->
         <scene sceneID="O3Y-xB-1ML">
@@ -806,7 +969,8 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="e2U-KI-pf7"/>
                                             </constraints>
-                                            <state key="normal" image="clock">
+                                            <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                            <state key="normal" image="info_icon">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <variation key="default">
@@ -952,7 +1116,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Favorites" id="WmK-7Y-2F1">
-                        <barButtonItem key="leftBarButtonItem" title="Edit" id="i5w-dw-luh">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="i5w-dw-luh">
                             <connections>
                                 <action selector="editButtonPressed:" destination="HKy-ey-80d" id="IMV-PY-w7p"/>
                             </connections>
@@ -1181,13 +1345,15 @@
         <image name="call_temp" width="150" height="150"/>
         <image name="clock" width="25" height="25"/>
         <image name="contact" width="25" height="25"/>
+        <image name="info_icon" width="25" height="25"/>
         <image name="keypad" width="25" height="25"/>
+        <image name="out_call_icon" width="25" height="25"/>
         <image name="settings" width="25" height="25"/>
         <image name="star" width="25" height="25"/>
         <image name="star_empty" width="250" height="235"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="OOV-8S-Jik"/>
-        <segue reference="j9n-fd-XrW"/>
+        <segue reference="OZL-WT-bfh"/>
     </inferredMetricsTieBreakers>
 </document>
